update desktop css to stop overflow

--- a/src/alex-os/components/Desktop.css
+++ b/src/alex-os/components/Desktop.css
@@ -1,5 +1,5 @@
 .desktop {
-    background: linear-gradient(45deg, rgb(52, 31, 103), rgb(225, 78, 193) );
-    width: 100vw;
-    height: 100vh; 
-  }
+  background: linear-gradient(45deg, rgb(52, 31, 103), rgb(225, 78, 193));
+  flex: 1; /* Allow the desktop to grow and take up all available space */
+  overflow: auto; /* Add scroll if the content inside desktop overflows */
+}
